crates/toml/tests/snapshots/invalid/string/basic-multiline-unknown-escape.stderr
TOML parse error at line 1, column 9
  |
1 | a = """\@"""
  |         ^
missing escaped value, expected `b`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
